# iobsolve

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
api/continuous/flow_theorem/: index.html
api/continuous/hinge/: index.html
api/core/base_operator/: index.html
api/core/laplacian/: index.html
api/core/partition/: index.html
api/core/space/: index.html
api/core/spectral/: index.html
api/core/types/: index.html
api/discrete/estimators/: index.html
api/discrete/hinge/: index.html
api/discrete/surgery/: index.html
api/io/exporters/: index.html
api/io/parsers/: index.html
api/io/visualizers/: index.html
api/plugins/dynamics/: index.html
api/plugins/mode_collapse/: index.html
api/plugins/network_shield/: index.html
api/plugins/singularities/: index.html
docs/: index.md
docs/api/: index.md
docs/api/continuous/: flow_theorem.md  hinge.md
docs/api/core/: base_operator.md  laplacian.md  partition.md  space.md  spectral.md  types.md
docs/api/discrete/: estimators.md  hinge.md  surgery.md
docs/api/io/: exporters.md  parsers.md  visualizers.md
docs/api/plugins/: dynamics.md  mode_collapse.md  network_shield.md  singularities.md
docs/guides/: cli.md  configuration.md  continuous.md  discrete.md  getting_started.md
docs/reference/: changelog.md  math.md
guides/cli/: index.html
guides/configuration/: index.html
guides/continuous/: index.html
guides/discrete/: index.html
guides/getting_started/: index.html
iobsolve/: cli.py
iobsolve/continuous/: __init__.py  flow_theorem.py  hinge.py
iobsolve/core/: __init__.py  base_operator.py  calibration.py  laplacian.py  operator.py  partition.py  space.py  spectral.py  types.py
iobsolve/discrete/: __init__.py  estimators.py  hinge.py  surgery.py
iobsolve/io/: exporters.py  parsers.py  visualizers.py
iobsolve/plugins/continuous/: dynamics.py  singularities.py
iobsolve/plugins/control/: __init__.py  sys_control.py
iobsolve/plugins/discrete/: mode_collapse.py  network_shield.py
iobsolve/plugins/dynamics/: continuous.py
iobsolve/plugins/finance/: __init__.py  market.py
iobsolve/plugins/math/: singularities.py
iobsolve/plugins/network/: ddos_shield.py
iobsolve/utils/: numeric.py  signal.py  visualize.py
paper/: main.tex  references.bib  styles.tex
reference/changelog/: index.html
reference/math/: index.html
search/: search_index.json
tests/: conftest.py  test_chaos_control.py  test_cli.py  test_ddos_attack.py  test_ddos_attack_auto_log.txt  test_ddos_attack_log.txt  test_flash_crash.py  test_lorenz96.py  test_plugin_continuous.py  test_plugin_discrete.py  test_singularities.py  test_singularities_log.txt
tests/benchmarks/: bench_case1_static.py  bench_case2_mode_collapse.py  bench_case3_ddos.py  test_performance.py
tests/cli/: config_pipeline.json  embeddings_modelo.json  test_cli.py
tests/continuous/: test_dynamics.py  test_hinge_and_spectral.py  test_singularities.py
tests/core/: test_laplacian.py  test_space_and_partition.py
tests/discrete/: test_discrete_hinge_and_surgery.py  test_network_shield.py  test_topology.py
tests/io/: test_io.py
tests/vis/: telemetry.py  test_plots.py
