[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iobsolve"
version = "0.2.0"
description = "Mathematical engine for topological integrity, singularity location, and network anomaly surgery."
readme = "README.md"
authors = [
    { name = "Joaquín Knuttzen", email = "joaknuttzen06@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "topology", 
    "graph-theory", 
    "differential-geometry", 
    "chaos-theory", 
    "cybersecurity",
    "pytorch",
    "autograd"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]

dependencies = [
    "torch>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.5.0",
    "pyright>=1.1.300",
    "ruff>=0.1.0"
]

vis = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "networkx>=3.0"
]

[project.urls]
Homepage = "https://github.com/JoaKnut/iobsolve"
Repository = "https://github.com/JoaKnut/iobsolve"
"Bug Tracker" = "https://github.com/JoaKnut/iobsolve/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["iobsolve*"]

[project.scripts]
iobsolve = "iobsolve.cli:main"

[tool.pyright]
include = ["iobsolve"]
exclude = ["**/__pycache__", "build", "dist"]
strict = ["iobsolve/core", "iobsolve/continuous", "iobsolve/discrete"]
reportMissingTypeStubs = true

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true